--- a/WPFApp/WpfAdvBank/WpfLoginApp/LoginWindow.xaml
+++ b/WPFApp/WpfAdvBank/WpfLoginApp/LoginWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfLoginApp"
         mc:Ignorable="d"
-        Title="Login" Height="327" Width="334" Background="LightSteelBlue" Initialized="Window_Initialized">
+        Title="Login" Height="327" Width="334" Background="SkyBlue" Initialized="Window_Initialized">
     <Grid Margin="20" Background="White">
         <StackPanel Margin="20">
             <Label Content="Login" FontSize="20" HorizontalAlignment="Center" />
