--- a/WPFApp/WpfAdvBank/WpfPracticeApp/App.xaml
+++ b/WPFApp/WpfAdvBank/WpfPracticeApp/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="WpfPracticeApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfPracticeApp"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:WpfPracticeApp">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -11,7 +10,6 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <!-- Theme setting -->
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Light.Blue.xaml" />
-
                 <ResourceDictionary Source="PracticeTemplate.xaml" />
             </ResourceDictionary.MergedDictionaries>            
         </ResourceDictionary>        
